--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Priority: optional
 Maintainer: Kubuntu Developers <kubuntu-devel@lists.ubuntu.com>
 XSBC-Original-Maintainer: Rohan Garg <rohangarg@kubuntu.org>
 Build-Depends: debhelper (>= 8.0.0), cmake,
- extra-cmake-modules,
+ extra-cmake-modules (>= 0.0.10),
  libqt5x11extras-dev,
  pkg-config,
  libxcb-sync0-dev,
@@ -16,12 +16,12 @@ Homepage: https://projects.kde.org/kidletime
 Package: libkf5idletime-dev
 Section: libdevel
 Architecture: any
-Depends: libkf5idletime5 (= ${binary:Version})
+Depends: libkf5idletime4 (= ${binary:Version})
 Description: development headers for the kidletime library
  This package contains development files for building software that uses
  libraries from the kidletime KDE framework.
 
-Package: libkf5idletime5
+Package: libkf5idletime4
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -31,11 +31,11 @@ Description: library to provide information about idle time
  the current idle time of the PC, but also for getting notified upon idle
  time events, such as custom timeouts, or user activity.
 
-Package: libkf5idletime5-dbg
+Package: libkf5idletime4-dbg
 Section: debug
 Priority: extra
 Architecture: any
-Depends: libkf5idletime5 (= ${binary:Version})
+Depends: libkf5idletime4 (= ${binary:Version})
 Description: debugging symbols for the kidletime libraries
  This package contains debugging files used to investigate problems with
- the libkf5idletime5 package
+ the libkf5idletime4 package
