--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Maintainer: Kubuntu Developers <kubuntu-devel@lists.ubuntu.com>
 XSBC-Original-Maintainer: Rohan Garg <rohangarg@kubuntu.org>
 Build-Depends: debhelper (>= 8.0.0), cmake,
  extra-cmake-modules (>= 0.0.11),
- libqt5x11extras-dev,
+ libqt5x11extras5-dev,
  pkg-config,
  libxcb-sync0-dev,
  qtbase5-dev,
