--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Build-Depends: cmake,
                extra-cmake-modules (>= 0.0.13),
                libqt5x11extras5-dev,
                libxcb-sync0-dev,
+               libxss-dev,
                pkg-config,
                pkg-kde-tools,
                qtbase5-dev
