--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Build-Depends: cmake,
                libxcb-sync0-dev,
                libxss-dev,
                pkg-config,
-               pkg-kde-tools,
+               pkg-kde-tools (>= 0.15.15),
                qtbase5-dev
 Standards-Version: 3.9.5
 Section: libs
