--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: kidletime
 Priority: optional
 Maintainer: Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Maximiliano Curia <maxy@debian.org>
-Build-Depends: cmake,
+Build-Depends: cmake (>= 2.8.12),
                debhelper (>= 9),
                extra-cmake-modules (>= 1.6.0),
                libqt5x11extras5-dev,
@@ -10,7 +10,7 @@ Build-Depends: cmake,
                libxss-dev,
                pkg-config,
                pkg-kde-tools (>= 0.15.15ubuntu1~),
-               qtbase5-dev
+               qtbase5-dev (>= 5.2.0)
 Standards-Version: 3.9.6
 Section: libs
 Homepage: https://projects.kde.org/kidletime
