--- a/debian/control
+++ b/debian/control
@@ -4,12 +4,10 @@ Maintainer: Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Maximiliano Curia <maxy@debian.org>
 Build-Depends: cmake (>= 2.8.12),
                debhelper (>= 9),
-               extra-cmake-modules (>= 1.6.0),
                extra-cmake-modules (>= 1.7.0),
-               libqt5x11extras5-dev,
-               libxcb-sync0-dev,
-               libxss-dev,
-               pkg-config,
+               libx11-dev,
+               libx11-xcb-dev,
+               libxcb1-dev,
                pkg-kde-tools (>= 0.15.15ubuntu1~),
                qtbase5-dev (>= 5.2.0)
 Standards-Version: 3.9.6
