--- a/debian/control
+++ b/debian/control
@@ -5,9 +5,11 @@ Uploaders: Maximiliano Curia <maxy@debian.org>
 Build-Depends: cmake (>= 2.8.12),
                debhelper (>= 9),
                extra-cmake-modules (>= 1.7.0),
+               libqt5x11extras5-dev (>= 5.2.0),
                libx11-dev,
                libx11-xcb-dev,
                libxcb1-dev,
+               libxcb-sync-dev,
                pkg-kde-tools (>= 0.15.15ubuntu1~),
                qtbase5-dev (>= 5.2.0)
 Standards-Version: 3.9.6
