--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Standards-Version: 3.9.6
 Section: libs
 XS-Testsuite: autopkgtest
 Homepage: https://projects.kde.org/kidletime
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/frameworks/kidletime.git
+Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/frameworks/kidletime.git
 Vcs-Git: git://anonscm.debian.org/pkg-kde/frameworks/kidletime.git
 
 Package: libkf5idletime-dev
