--- a/debian/control
+++ b/debian/control
@@ -8,8 +8,8 @@ Build-Depends: cmake (>= 2.8.12),
                libqt5x11extras5-dev (>= 5.2.0),
                libx11-dev,
                libx11-xcb-dev,
-               libxcb1-dev,
                libxcb-sync-dev,
+               libxcb1-dev,
                pkg-kde-tools (>= 0.15.15ubuntu1~),
                qtbase5-dev (>= 5.2.0)
 Standards-Version: 3.9.6
@@ -22,7 +22,7 @@ Vcs-Git: git://anonscm.debian.org/pkg-kde/frameworks/kidletime.git
 Package: libkf5idletime-dev
 Section: libdevel
 Architecture: any
-Depends: libkf5idletime5 (= ${binary:Version}), qtbase5-dev
+Depends: libkf5idletime5 (= ${binary:Version}), qtbase5-dev (>= 5.2.0)
 Description: development headers for the kidletime library
  This package contains development files for building software that uses
  libraries from the kidletime KDE framework.
