--- a/debian/control
+++ b/debian/control
@@ -16,8 +16,8 @@ Build-Depends: cmake (>= 2.8.12),
 Standards-Version: 3.9.6
 Section: libs
 Homepage: https://projects.kde.org/kidletime
-Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/frameworks/kidletime.git
-Vcs-Git: git://anonscm.debian.org/pkg-kde/frameworks/kidletime.git
+Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/frameworks/kidletime.git
+Vcs-Git: https://anonscm.debian.org/pkg-kde/frameworks/kidletime.git
 
 Package: libkf5idletime-dev
 Section: libdevel
