--- a/debian/control
+++ b/debian/control
@@ -2,17 +2,17 @@ Source: kidletime
 Priority: optional
 Maintainer: Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Maximiliano Curia <maxy@debian.org>
-Build-Depends: cmake (>= 2.8.12),
+Build-Depends: cmake (>= 3.0~),
                debhelper (>= 9),
-               extra-cmake-modules (>= 5.28.0~),
-               libqt5x11extras5-dev (>= 5.5.0~),
+               extra-cmake-modules (>= 5.35.0~),
+               libqt5x11extras5-dev (>= 5.6.0~),
                libx11-dev,
                libx11-xcb-dev,
                libxcb-sync-dev,
                libxcb1-dev,
                pkg-config,
                pkg-kde-tools (>= 0.15.15ubuntu1~),
-               qtbase5-dev (>= 5.5.0~)
+               qtbase5-dev (>= 5.6.0~)
 Standards-Version: 4.0.0
 Section: libs
 Homepage: https://projects.kde.org/kidletime
@@ -22,7 +22,7 @@ Vcs-Git: https://anonscm.debian.org/git/pkg-kde/frameworks/kidletime.git
 Package: libkf5idletime-dev
 Section: libdevel
 Architecture: any
-Depends: libkf5idletime5 (= ${binary:Version}), qtbase5-dev (>= 5.5.0~)
+Depends: libkf5idletime5 (= ${binary:Version}), qtbase5-dev (>= 5.6.0~)
 Description: development headers for the kidletime library
  This package contains development files for building software that uses
  libraries from the kidletime KDE framework.
