--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Build-Depends: cmake (>= 3.0~),
                libx11-xcb-dev,
                libxcb-sync-dev,
                libxcb1-dev,
-               libxss-dev,
+               libxss-dev [!hurd-any],
                pkg-config,
                pkg-kde-tools (>= 0.15.15ubuntu1~),
                qtbase5-dev (>= 5.6.0~)
