--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,14 @@
 Source: kidletime
 Priority: optional
+Section: libs
 Maintainer: Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Maximiliano Curia <maxy@debian.org>
 Build-Depends: cmake (>= 3.0~),
                debhelper (>= 9),
+               doxygen,
                extra-cmake-modules (>= 5.37.0~),
+               graphviz,
+               libqt5sql5-sqlite,
                libqt5x11extras5-dev (>= 5.7.0~),
                libx11-dev,
                libx11-xcb-dev,
@@ -13,9 +17,9 @@ Build-Depends: cmake (>= 3.0~),
                libxss-dev [!hurd-any],
                pkg-config,
                pkg-kde-tools (>= 0.15.15ubuntu1~),
-               qtbase5-dev (>= 5.7.0~)
+               qtbase5-dev (>= 5.7.0~),
+               qttools5-dev-tools (>= 5.4),
 Standards-Version: 4.0.0
-Section: libs
 Homepage: https://projects.kde.org/kidletime
 Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/frameworks/kidletime.git
 Vcs-Git: https://anonscm.debian.org/git/pkg-kde/frameworks/kidletime.git
@@ -24,13 +28,25 @@ Package: libkf5idletime-dev
 Section: libdevel
 Architecture: any
 Depends: libkf5idletime5 (= ${binary:Version}), qtbase5-dev (>= 5.7.0~)
+Recommends: libkf5idletime-doc (= ${source:Version})
 Description: development headers for the kidletime library
  This package contains development files for building software that uses
  libraries from the kidletime KDE framework.
 Breaks: libkf5kdelibs4support-dev (<< 5.37)
 
+Package: libkf5idletime-doc
+Architecture: all
+Multi-Arch: foreign
+Depends: ${misc:Depends}
+Description: library to provide information about idle time (documentation)
+ This library contains a class that allows applications to watch for
+ user activity or inactivity. It is useful not only for finding out about
+ the current idle time of the PC, but also for getting notified upon idle
+ time events, such as custom timeouts, or user activity.
+ .
+ This package contains the qch documentation files.
+
 Package: libkf5idletime5
-Section: libs
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Multi-Arch: same
